# pepper

./: Cargo.toml  README.md  pepper_config.toml
.github/workflows/: rust.yml
examples/: main.pr  program.pr
examples/shapes/: module.pr  shape.pr
src/: config.rs  db.rs  error.rs  ir.rs  lexer.rs  lib.rs  main.rs  project.rs  scopes.rs  span.rs  tokens.rs
src/codegen/: mod.rs
src/diagnostics/: error.rs  mod.rs  report.rs
src/hir/: mod.rs
src/lexer/: mod.rs  tokens.rs
src/lower/: mir.rs  mod.rs
src/mir/: lower.rs  mod.rs
src/parser/: ast.rs  mod.rs
src/snapshots/: pepper__tests__mir_tests@bin_ops.snap  pepper__tests__mir_tests@booleans.snap  pepper__tests__mir_tests@extern.snap  pepper__tests__mir_tests@fib.snap  pepper__tests__mir_tests@function_calls.snap  pepper__tests__mir_tests@function_types.snap  pepper__tests__mir_tests@match.snap  pepper__tests__mir_tests@numbers.snap  pepper__tests__mir_tests@unary_ops.snap  pepper__tests__parser_tests@empty.snap  pepper__tests__parser_tests@empty_function.snap  pepper__tests__parser_tests@params_and_return.snap  pepper__tests__parser_tests@return_type_path.snap  pepper__tests__parser_tests@return_type_simple.snap  pepper__tests__parser_tests@tests_parser_dot_expr_simple.pr.snap  pepper__tests__parser_tests@tests_parser_function_signatures_empty.pr.snap  pepper__tests__parser_tests@tests_parser_function_signatures_function_generics.pr.snap  pepper__tests__parser_tests@tests_parser_function_signatures_multiple_functions.pr.snap  pepper__tests__parser_tests@tests_parser_function_signatures_multiple_params.pr.snap  pepper__tests__parser_tests@tests_parser_function_signatures_one_param.pr.snap  pepper__tests__parser_tests@tests_parser_function_signatures_params_and_return.pr.snap  pepper__tests__parser_tests@tests_parser_function_signatures_return_type_path.pr.snap  pepper__tests__parser_tests@tests_parser_function_signatures_return_type_simple.pr.snap  pepper__tests__parser_tests@tests_parser_idents_weird_idents.pr.snap  pepper__tests__parser_tests@tests_parser_match_fibonacci.pr.snap  (+14 more)
src/typecheck/: engine.rs  mod.rs  typed.rs  (+1 more)
std/: std.pr
(+49 files in other folders)
