[package]
name = "pepper"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
chumsky = "1.0.0-alpha.7"
clap = { version = "4.5.20", features = ["derive"] }
codespan-reporting = "0.11.1"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
rustc-hash = "2.0.0"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
